[package]
name = "redeem-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
webbrowser = "1"
anyhow = "1"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
